--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -127,9 +127,16 @@
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:gravity="center_horizontal"
+
 			android:text="@string/warning_register"
 
+			android:textSize="16sp"/>
+
+		<TextView
+			android:id="@+id/accept_privacy"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="Accept Privacy"
 			android:textSize="16sp"/>
 
 
