--- a/app/src/main/res/menu/index_guest.xml
+++ b/app/src/main/res/menu/index_guest.xml
@@ -4,6 +4,9 @@
 		android:id="@+id/settings"
 		android:title="Settings"/>
 	<item
+		android:id="@+id/privacy"
+		android:title="Privacy Policy"/>
+	<item
 		android:id="@+id/logout"
 		android:title="Logout"/>
 </menu>
